# rtlgen

./: CMakeLists.txt  README.md
.ci/: build-project.sh
.github/workflows/: ci.yml
common/: api_core.h  attribute.cpp  attribute.h  autobuffer.cpp  autobuffer.h  iattr.h  iface.h  iservice.h
configs/: genconfig.h
librtlgen/: CMakeLists.txt
librtlgen/src/: api.h  api_rtlgen.cpp  api_rtlgen.h  array.cpp  array.h  clock.cpp  clock.h  comments.cpp  comments.h  const.cpp  const.h  defparams.cpp  defparams.h  enums.cpp  enums.h  files.cpp  files.h  folders.cpp  folders.h  funcs.cpp  funcs.h  genobject.cpp  genobjects.h  logic.cpp  logic.h  minstance.cpp  minstance.h  modules.cpp  modules.h  modules_sv.cpp  modules_sysc.cpp  modules_sysc.cpp~RF23ddd6c.TMP  modules_vhdl.cpp  operations.cpp  operations.h  params.cpp  params.h  ports.cpp  ports.h  proc.cpp  (+19 more)
libscv_gen/: CMakeLists.txt
libscv_gen/src/: api.cpp  api.h  cfgfile.cpp  commentobj.cpp  comments.cpp  comments.h  folderobj.cpp  folders.cpp  genobj.cpp  genobject.cpp  genobjects.h  headfileobj.cpp  ioobj.cpp  moduleobj.cpp  modules.cpp  modules.h  paramobj.cpp  params.cpp  params.h  ports.cpp  ports.h  prjobj.cpp  projects.cpp  projects.h  systemc_gen.cpp  systemc_gen.h  utils.cpp  utils.h  values.cpp  values.h
libscv_gen/src/wininclude/: dirent.h
rivergen/: main.cpp  prj_river.cpp  prj_river.h
rivergen/prj/: prj_folder.h
rivergen/prj/common/: common_folder.h
rivergen/prj/common/vips/: vips_folder.h
rivergen/prj/impl/: impl_folder.h
rivergen/prj/impl/asic/: asic_folder.h  asic_top.cpp  asic_top.h  config_target.h  target_cfg.cpp  target_cfg.h
rivergen/prj/impl/asic_accel/: asic_accel_folder.h  asic_accel_top.cpp  asic_accel_top.h  target_accel_cfg.cpp  target_accel_cfg.h
rivergen/prj/impl/asic_accel_sim/: asic_accel_sim_folder.h  asic_accel_top_tb.cpp  asic_accel_top_tb.h
rivergen/prj/impl/asic_full/: asic_full_folder.h  config_target.cpp  config_target.h
rivergen/prj/impl/asic_gencpu64/: asic_gencpu64_folder.h  asic_gencpu64_top.cpp  asic_gencpu64_top.h  target_gencpu64_cfg.cpp  target_gencpu64_cfg.h
rivergen/prj/impl/asic_gencpu64_sim/: asic_gencpu64_sim_folder.h  asic_gencpu64_top_tb.cpp  asic_gencpu64_top_tb.h
rivergen/prj/impl/asic_sim/: asic_sim_folder.h  asic_top_tb.cpp  asic_top_tb.h
rivergen/rtl/: riscv_soc.cpp  riscv_soc.h  rtl_folder.h
rivergen/rtl/ambalib/: ambalib_folder.h  apb_slv.cpp  apb_slv.h  axi2apb.cpp  axi2apb.h  axi2apb_bus1.cpp  axi2apb_bus1.h  axi_slv.cpp  axi_slv.h  axictrl_bus0.cpp  axictrl_bus0.h  types_amba.cpp  types_amba.h  types_bus0.cpp  types_bus0.h  types_bus1.cpp  types_bus1.h  types_dma.cpp  types_dma.h  types_pnp.cpp  types_pnp.h
rivergen/rtl/internal/: internal_folder.h
rivergen/rtl/internal/accel/: accel_axi2apb_bus1.cpp  accel_axi2apb_bus1.h  accel_axictrl_bus0.cpp  accel_axictrl_bus0.h  accel_folder.h  accel_soc.cpp  accel_soc.h  types_accel_bus0.cpp  types_accel_bus0.h  types_accel_bus1.cpp  types_accel_bus1.h
rivergen/rtl/internal/ambalib/: ambalib_folder.h  apb_slv.cpp  apb_slv.h  axi2apb_bus1.cpp  axi2apb_bus1.h  axi_dma.cpp  axi_dma.h  axi_slv.cpp  axi_slv.h  axictrl_bus0.cpp  axictrl_bus0.h  pbridge.h  types_amba.cpp  types_bus0.cpp  types_bus0.h  types_bus1.cpp  types_bus1.h  types_dma.cpp  types_pnp.cpp  types_pnp.h  xinteconnect.h
rivergen/rtl/internal/cdc/: afifo_xmst.cpp  afifo_xmst.h  afifo_xslv.cpp  afifo_xslv.h  cdc_afifo.cpp  cdc_afifo.h  cdc_afifo_gray.cpp  cdc_afifo_gray.h  cdc_dp_mem.cpp  cdc_dp_mem.h  cdc_folder.h
rivergen/rtl/internal/gencpu64/: gencpu64_axi2apb_bus1.cpp  gencpu64_axi2apb_bus1.h  gencpu64_axictrl_bus0.cpp  gencpu64_axictrl_bus0.h  gencpu64_folder.h  gencpu64_soc.cpp  gencpu64_soc.h  types_gencpu64_bus0.cpp  types_gencpu64_bus0.h  types_gencpu64_bus1.cpp  types_gencpu64_bus1.h
rivergen/rtl/internal/hdmilib/: framebuf.cpp  framebuf.h  hdmi_top.cpp  hdmi_top.h  hdmilib_folder.h  rgb2ycbcr.cpp  rgb2ycbcr.h  video_sync.cpp  video_sync.h
rivergen/rtl/internal/mathlib/: fadd_generic.cpp  fadd_generic.h  fmul_generic.cpp  fmul_generic.h  fmul_istage.cpp  fmul_istage.h  lzd_scaler.cpp  lzd_scaler.h  mathlib_folder.h  mul_4x4_i8.cpp  mul_4x4_i8.h  mul_b8.cpp  mul_b8.h  mul_i8.cpp  mul_i8.h
rivergen/rtl/internal/mem/: mem_folder.h  ram_bytes_tech.h  ram_cache_bwe_tech.cpp  ram_cache_bwe_tech.h  ram_dp_fifo_tech.cpp  ram_dp_fifo_tech.h  ram_mmu_tech.cpp  ram_mmu_tech.h  ram_tech.cpp  ram_tech.h  rom_inferred_2x32.cpp  rom_inferred_2x32.h
rivergen/rtl/internal/misclib/: apb_ddr.cpp  apb_ddr.h  apb_gpio.cpp  apb_gpio.h  apb_i2c.cpp  apb_i2c.h  apb_pnp.cpp  apb_pnp.h  apb_prci.cpp  apb_prci.h  apb_spi.h  (+14 more)
rivergen/rtl/misclib/: apb_ddr.cpp  apb_ddr.h  apb_gpio.cpp  apb_gpio.h  apb_pnp.cpp  apb_pnp.h  apb_prci.cpp  apb_prci.h  apb_spi.cpp  apb_spi.h  apb_uart.cpp  apb_uart.h  axi_rom.cpp  axi_rom.h  axi_sram.cpp  axi_sram.h  clint.cpp  clint.h  misclib_folder.h  plic.cpp  plic.h  sfifo.cpp  sfifo.h
rivergen/rtl/pcie/: apb_pcie.cpp  apb_pcie.h  pcie_cfg.cpp  pcie_cfg.h  pcie_dma.cpp  pcie_dma.h  pcie_folder.h
rivergen/rtl/riverlib/: dummycpu.cpp  dummycpu.h  ic_axi4_to_l1.cpp  ic_axi4_to_l1.h  river_amba.cpp  river_amba.h  river_cfg.cpp  river_cfg.h  river_top.cpp  river_top.h  riverlib_folder.h  types_river.cpp  types_river.h  workgroup.cpp  workgroup.h
rivergen/rtl/sdctrl/: sdctrl.cpp  sdctrl.h  sdctrl_cache.cpp  sdctrl_cache.h  sdctrl_cfg.cpp  sdctrl_cfg.h  sdctrl_cmd_transmitter.cpp  sdctrl_cmd_transmitter.h  sdctrl_crc15.cpp  sdctrl_crc15.h  sdctrl_crc16.cpp  sdctrl_crc16.h  sdctrl_crc7.cpp  sdctrl_crc7.h  sdctrl_err.cpp  sdctrl_err.h  sdctrl_folder.h  sdctrl_regs.cpp  sdctrl_regs.h  sdctrl_sdmode.cpp  sdctrl_sdmode.h  sdctrl_spimode.cpp  sdctrl_spimode.h  sdctrl_wdog.cpp  sdctrl_wdog.h
rivergen/rtl/sim/: sim_folder.h
rivergen/rtl/techmap/: techmap_folder.h
rtl/: main.cpp
rtl/riverlib/: river_top.cpp  river_top.h
src/: main.cpp  prj_river.cpp  prj_river.h
src/rtl/ambalib/: types_amba.cpp  types_amba.h
src/rtl/riverlib/: river_cfg.cpp  river_cfg.h  river_top.cpp  river_top.h
testapp/: main.cpp
(+410 files in other folders)
